# terraform-diff-summary

./: .gitignore  AGENTS.md  README.md  action.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  parser-failure.md
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  tag-release.yml
example_tfplan/: tfplan-json-broken-negative-test-sanitized.json  tfplan-json-huge-noisy-sanitized.json  tfplan-json-noisy-sanitized.json  tfplan-json-small-clean-sanitized.json
scripts/: __init__.py  run_tests.py  terraform_diff_summary.py
scripts/terraform_plan_summary/: __init__.py  changes.py  cli.py  config.py  diff.py  policy.py  pr_comment.py  render.py
tests/: conftest.py  test_changes.py  test_cli.py  test_diff.py  test_example_fixtures.py  test_pr_comment.py  test_render.py  test_terraform_diff_summary.py
